# senior-swe_ai

./: .gitignore  .pylintrc  README.md  cli.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/: testing.yml
.github/workflows/: pipeline.yml  testing.yml
senior-SWE_ai/: pyproject.toml
senior_swe_ai/: cache.py  cli.py  conf.py  consts.py  file_handler.py  git_process.py  llm_handler.py  panel.py  vec_store.py
senior_swe_ai/tree_parser/: __init__.py  base.py  tree_parser_c.py  tree_parser_cpp.py  tree_parser_cs.py  tree_parser_py.py  tree_parser_rb.py  tree_parser_registry.py  tree_parser_rs.py
tests/: conftest.py  test_conf.py
