[tool.poetry]
name = "senior-swe-ai"
version = "0.1.0"
description = "SeniorSWE-AI is a command-line interface for in-context embedding that leverages the semantic comprehension capabilities of large language models to analyze the intended codebase and engage in a conversation with it, mimicking the behavior of a seasoned software engineer. "
authors = ["Younis <23105954+Younis-Ahmed@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.1,<3.12"
inquirer = "^3.2.4"
openai = "^1.14.0"
toml = "^0.10.2"
esprima = "^4.0.1"
tree-sitter = "^0.21.0"
tree-sitter-languages = "^1.10.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pylint = "^3.1.0"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
